[package]
name = "arcam"
version = "0.1.8"
description = "Sandboxed development containers at your fingertips"
edition = "2021"
license = "GPL-2.0-or-later"
keywords = ["container", "podman", "docker"]
categories = ["command-line-utilities", "virtualization"]
repository = "https://github.com/sandorex/arcam"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
bson = "2.13.0"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"

[build-dependencies]
anyhow = "1.0.86"
vergen-git2 = { version = "1.0.0", features = [] }
