[package]
name = "arcam"
version = "0.1.12"
description = "Sandboxed development containers at your fingertips"
edition = "2021"
license = "GPL-2.0-or-later"
keywords = ["container", "podman", "docker"]
categories = ["command-line-utilities", "virtualization"]
repository = "https://github.com/sandorex/arcam"
readme = "README.md"

[dependencies]
clap_complete = "4.5.42"
clap = { version = "4.5.11", features = ["derive", "env"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.20"
code-docs-rs = "0.1.0"
shellexpand = "3.1.0"
anyhow = "1.0.86"
users = "0.11.0"
serde_json = "1.0.138"
log = "0.4.25"
rand = "0.9.0"
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }

[build-dependencies]
anyhow = "1.0.86"
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0.16"
rexpect = "0.6.0"
tempfile = "3.16.0"
